syntax = "proto3";

package protocol;

message ReqLogin {
    uint32 cmd = 1;
    string cmdStr = 2;
    int64  UID = 3;
    string token = 4;
}

message ResLogin {
    uint32 cmd = 1;
    string cmdStr = 2;
    uint32 errCode = 3;
    string errStr = 4;
}



