syntax = "proto3";

package pb;

service ManagerRPC {
    rpc Login (LoginReq) returns (LoginRes) {}
}

// The request message containing the user's name.
message LoginReq {
    int64  UID    = 3;
    string token  = 4;

}

// The response message containing the greetings
message LoginRes {
    uint32 errCode = 3;
    string errStr  = 4;
}
